// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextCopy /> should match snapshot 1`] = `
<button
  className="sc-ifAKCX eqgLYm k-TextCopy k-u-reset-button k-TextCopy--orion"
  onClick={[Function]}
  type="button"
>
  <div
    className="sc-htpNat xBxON k-Form-TextInput k-TextCopy__text k-u-reset-button k-Form-TextInput--orion k-Form-TextInput--regular"
    disabled={false}
    name="text"
  >
    <span>
      Text To Copy
    </span>
  </div>
  <span
    className="sc-bwzfXH eSkoEU k-Button k-TextCopy__buttonTextButton k-Button--regular k-Button--hydrogen k-Button--orion k-Button--fit-icon"
    disabled={null}
    style={
      Object {
        "--Button-border-radius": null,
      }
    }
    type="button"
  >
    <svg
      height="22"
      viewBox="0 0 22 22"
      width="22"
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <path
        d="M21.607 6.05l-7.071 7.071L12.414 11 11 12.414l2.121 2.122-7.07 7.07L.392 15.95l7.071-7.071L9.586 11 11 9.586 8.879 7.464l7.07-7.07 5.658 5.656zm-11.314 8.486l-.707-.708-1.414 1.415-1.415-1.415 1.415-1.414-.708-.707-4.242 4.243 2.828 2.828 4.243-4.242zm8.485-8.486L15.95 3.222l-4.243 4.242.707.708 1.414-1.415 1.415 1.415-1.415 1.414.708.707 4.242-4.243z"
        fill="#000"
      />
    </svg>
  </span>
</button>
`;

exports[`<TextCopy /> should match snapshot with button text 1`] = `
<button
  className="sc-ifAKCX eqgLYm k-TextCopy k-u-reset-button k-TextCopy--orion"
  onClick={[Function]}
  type="button"
>
  <span
    className="k-u-a11y-visuallyHidden"
  >
    This is a description
  </span>
  <div
    className="sc-htpNat xBxON k-Form-TextInput k-TextCopy__text k-u-reset-button k-Form-TextInput--orion k-Form-TextInput--regular"
    disabled={false}
    name="text"
  >
    <span>
      Text To Copy
    </span>
  </div>
  <span
    className="sc-bwzfXH buyYPw k-Button k-TextCopy__buttonTextButton k-Button--regular k-Button--helium k-Button--orion k-Button--fit-content"
    disabled={null}
    style={
      Object {
        "--Button-border-radius": null,
      }
    }
    type="button"
  >
    Button text
  </span>
</button>
`;

exports[`<TextCopy /> should match snapshot with description 1`] = `
<button
  className="sc-ifAKCX eqgLYm k-TextCopy k-u-reset-button k-TextCopy--orion"
  onClick={[Function]}
  type="button"
>
  <span
    className="k-u-a11y-visuallyHidden"
  >
    This is a description
  </span>
  <div
    className="sc-htpNat xBxON k-Form-TextInput k-TextCopy__text k-u-reset-button k-Form-TextInput--orion k-Form-TextInput--regular"
    disabled={false}
    name="text"
  >
    <span>
      Text To Copy
    </span>
  </div>
  <span
    className="sc-bwzfXH eSkoEU k-Button k-TextCopy__buttonTextButton k-Button--regular k-Button--hydrogen k-Button--orion k-Button--fit-icon"
    disabled={null}
    style={
      Object {
        "--Button-border-radius": null,
      }
    }
    type="button"
  >
    <svg
      height="22"
      viewBox="0 0 22 22"
      width="22"
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <path
        d="M21.607 6.05l-7.071 7.071L12.414 11 11 12.414l2.121 2.122-7.07 7.07L.392 15.95l7.071-7.071L9.586 11 11 9.586 8.879 7.464l7.07-7.07 5.658 5.656zm-11.314 8.486l-.707-.708-1.414 1.415-1.415-1.415 1.415-1.414-.708-.707-4.242 4.243 2.828 2.828 4.243-4.242zm8.485-8.486L15.95 3.222l-4.243 4.242.707.708 1.414-1.415 1.415 1.415-1.415 1.414.708.707 4.242-4.243z"
        fill="#000"
      />
    </svg>
  </span>
</button>
`;

exports[`<TextCopy /> should match snapshot with one line forced 1`] = `
<button
  className="sc-ifAKCX eqgLYm k-TextCopy k-u-reset-button k-TextCopy--orion"
  onClick={[Function]}
  type="button"
>
  <span
    className="k-u-a11y-visuallyHidden"
  >
    This is a description
  </span>
  <div
    className="sc-htpNat xBxON k-Form-TextInput k-TextCopy__text k-u-reset-button k-TextCopy__text--forceOneLine k-Form-TextInput--orion k-Form-TextInput--regular"
    disabled={false}
    name="text"
  >
    <span>
      Text To Copy
    </span>
  </div>
  <span
    className="sc-bwzfXH eSkoEU k-Button k-TextCopy__buttonTextButton k-Button--regular k-Button--hydrogen k-Button--orion k-Button--fit-icon"
    disabled={null}
    style={
      Object {
        "--Button-border-radius": null,
      }
    }
    type="button"
  >
    <svg
      height="22"
      viewBox="0 0 22 22"
      width="22"
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <path
        d="M21.607 6.05l-7.071 7.071L12.414 11 11 12.414l2.121 2.122-7.07 7.07L.392 15.95l7.071-7.071L9.586 11 11 9.586 8.879 7.464l7.07-7.07 5.658 5.656zm-11.314 8.486l-.707-.708-1.414 1.415-1.415-1.415 1.415-1.414-.708-.707-4.242 4.243 2.828 2.828 4.243-4.242zm8.485-8.486L15.95 3.222l-4.243 4.242.707.708 1.414-1.415 1.415 1.415-1.415 1.414.708.707 4.242-4.243z"
        fill="#000"
      />
    </svg>
  </span>
</button>
`;

exports[`<TextCopy /> should match snapshot with variant etc. 1`] = `
<button
  className="sc-ifAKCX eqgLYm k-TextCopy k-u-reset-button k-TextCopy--orion"
  onClick={[Function]}
  type="button"
>
  <span
    className="k-u-a11y-visuallyHidden"
  >
    This is a description
  </span>
  <div
    className="sc-htpNat xBxON k-Form-TextInput k-TextCopy__text k-u-reset-button k-Form-TextInput--orion k-Form-TextInput--regular"
    disabled={false}
    name="text"
  >
    <span>
      Text To Copy
    </span>
  </div>
  <span
    className="sc-bwzfXH buyYPw k-Button k-TextCopy__buttonTextButton k-Button--regular k-Button--helium k-Button--orion k-Button--fit-content"
    disabled={null}
    style={
      Object {
        "--Button-border-radius": null,
      }
    }
    type="button"
  >
    Button text
  </span>
</button>
`;
